[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opvault"
version = "2.2.1"
description = "Secure credential storage for security engagements"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
authors = [{ name = "elprofesor96" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=43.0",
    "click>=8.1",
    "rich>=13.0",
    "rich-click>=1.8",
]

[project.optional-dependencies]
argon2 = ["argon2-cffi>=23.1"]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
opvault = "opvault.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/opvault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
